fix: allow overflow on main element for montague designs

--- a/repro/montague-projects/buffalo-66/style.css
+++ b/repro/montague-projects/buffalo-66/style.css
@@ -1,3 +1,7 @@
+main {
+  overflow: auto;
+}
+
 .poster {
   --poster-width: 500px;
   --poster-height: 600px;
